--- a/css/style.css
+++ b/css/style.css
@@ -12,3 +12,11 @@
     padding: 15px;
     padding-bottom: 20px;
 }
+
+.box{
+    background-color: #e7e7e7; 
+}
+
+img.teamImg{
+    border-radius: 100%;
+}
