--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
     font-size: large;
     display: flex;
     align-items: center;
+    margin-top: 30px;
 }
 
 .body-section{
@@ -21,10 +22,16 @@
 
 img.teamImg{
     border-radius: 100%;
+}
   
 .bg-green{
     background-color: #d5f7e6;
 }
+
+.bg-gray{
+    background-color: #e7e7e7;
+}
+
 .texto-borde {
     color: black; 
     text-shadow: 0 0 0.2em #e7e7e7;
@@ -89,4 +96,9 @@ img.teamImg{
 
 .carousel-item > img {
     max-height: 550px;
+}
+
+.card-footer{
+    height: 15%;
+    background-color: #d5f7e6;
 }
